Added basic stochastic simulation code, that implements polymerase motion with supercoiling-dependent behavior and hard-sphere repulsion.
Squashed commits:
Added stochastic simulation
Updated model with RNAP hard-sphere repulsion
Fixed error where transcripts would have negative values, causing the solver to get very sad
Added restrictions to stop polymerases from adding onto already-occupied TSS
Moved to exponential-based torque response model
Moved floating point error code to initalization

--- a/sc_model.ipynb
+++ b/sc_model.ipynb
@@ -10,7 +10,9 @@
     "import numpy as np\n",
     "from numba import njit, vectorize, float32, float64, boolean\n",
     "from numba.experimental import jitclass\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "# Ensure we don't "
    ]
   },
   {
@@ -41,12 +43,13 @@
     "    'RNAP_radius': 15, # nm\n",
     "    'RNAP_velocity': 20, # nm / s\n",
     "    'RNAP_torque_cutoff': 12, # pN nm\n",
-    "    'RNAP_torque_exponent': 100,\n",
+    "    'RNAP_stall_torque_width': 3, #pN\n",
     "    'DNA_force': 1, # pN\n",
     "    'DNA_bend_plength': 50, # pN\n",
     "    'DNA_twist_plength': 95, # pN\n",
     "    'DNA_plectonome_twist_plength': 24, # pN\n",
-    "    'temperature': 298 # K\n",
+    "    'temperature': 298, # K\n",
+    "    'base_promoter_initiation_rate': 1 / 120 # 1 / sec\n",
     "}"
    ]
   },
@@ -58,8 +61,8 @@
    "source": [
     "# Most member variables are float64's except for left_bc_free/right_bc_free\n",
     "supercoiling_varspec = [(name,float64) for name in\n",
-    "                       ['kb', 'w0', 'tau_s', 'tau_0', 'tau_p', 'sc_s', 'sc_p',\n",
-    "                        'v_0', 't_c', 'torque_exp', 'chi', 'eta', 'alpha',\n",
+    "                       ['kb', 'w0', 'tau_s', 'tau_0', 'tau_p', 'sc_s', 'sc_p', 'rnac_r',\n",
+    "                        'v_0', 't_c', 'stall_torque_width', 'chi', 'eta', 'alpha',\n",
     "                       'left_bc_position', 'right_bc_position', 'left_bc_val', 'right_bc_val']]\n",
     "supercoiling_varspec.append(('left_bc_free', boolean))\n",
     "supercoiling_varspec.append(('right_bc_free', boolean))\n",
@@ -76,7 +79,7 @@
     "    of each of the polymerases and the induced supercoiling.\n",
     "    \"\"\"\n",
     "    def __init__(self, A, C, P, T, f,\n",
-    "                 v_0, critical_torque, torque_exponent,\n",
+    "                 v_0, critical_torque, stall_torque_width, rnac_r,\n",
     "                 chi, eta, alpha, left_bc_free, right_bc_free,\n",
     "                 left_bc_loc, right_bc_loc, left_bc_val, right_bc_val):\n",
     "        \"\"\"\n",
@@ -93,8 +96,8 @@
     "        v_0: The maximum speed of the polymerase (nm / s)\n",
     "        critical_torque: Torque (in pN nm) at which the\n",
     "            polymerases begin to stall.\n",
-    "        torque_exponent: An exponent encoding how sharp the\n",
-    "            stalling torque is.\n",
+    "        stall_torque_width: How wide the stall torque distribution is (pN)\n",
+    "        rnac_r: The radius of a RNAP (used for hard-sphere replusion)\n",
     "        chi: The DNA twisting mobility (s pN nm)\n",
     "        eta: The The mRNA drag coefficent (pN (nm^(alpha - 1)))\n",
     "        alpha: The mRNA power-law scaling exponent.\n",
@@ -121,9 +124,10 @@
     "        self.sc_s = 1 / cs * np.sqrt(2 * p * g  / (1 - p / cs)) # dimless\n",
     "        self.sc_p = 1 / p * np.sqrt(2 * p * g / (1 - p / cs)) # dimless\n",
     "        \n",
+    "        self.rnac_r = rnac_r\n",
     "        self.v_0 = v_0\n",
     "        self.t_c = critical_torque\n",
-    "        self.torque_exp = torque_exponent\n",
+    "        self.stall_torque_width = stall_torque_width\n",
     "        self.chi = chi\n",
     "        self.eta = eta\n",
     "        self.alpha = alpha\n",
@@ -133,6 +137,39 @@
     "        self.right_bc_position = right_bc_loc\n",
     "        self.left_bc_val = left_bc_val\n",
     "        self.right_bc_val = right_bc_val\n",
+    "    \n",
+    "    def evaluate_twist(self, x, states):\n",
+    "        \"\"\"\n",
+    "        Given the current polymerase states,\n",
+    "        computes the excess DNA twist phi at each\n",
+    "        of the points in x.\n",
+    "        \n",
+    "        Args:\n",
+    "        -----\n",
+    "        x: An ndarray representing the points to evaluate phi at.\n",
+    "        states: A (3N,) shape ndarray encoding (location, mRNA, phi) for each polymerase.\n",
+    "            This vector is assumed to be sorted in increasing order of location.\n",
+    "        \n",
+    "        Returns:\n",
+    "        --------\n",
+    "        An ndarray matching the shape of x, where twist has been evaluated.\n",
+    "        \"\"\"\n",
+    "        augmented_loc = np.concatenate((np.array([self.left_bc_position]),\n",
+    "                                        states[::3],\n",
+    "                                        np.array([self.right_bc_position])))\n",
+    "        augmented_phi = np.concatenate((np.array([self.left_bc_val]),\n",
+    "                                        states[2::3],\n",
+    "                                        np.array([self.right_bc_val])))\n",
+    "        # Replace these with free BCs if needed\n",
+    "        if self.left_bc_free:\n",
+    "            # Step w0 away from BC, to avoid divide by zero errors.\n",
+    "            augmented_loc[0] = augmented_loc[1] - 1\n",
+    "            augmented_phi[0] = augmented_phi[1]\n",
+    "        if self.right_bc_free:\n",
+    "            augmented_loc[-1] = augmented_loc[-2] + 1\n",
+    "            augmented_phi[-1] = augmented_phi[-2]\n",
+    "        \n",
+    "        return np.interp(x, augmented_loc, augmented_phi)\n",
     "    \n",
     "    def torque_response(self, sc):\n",
     "        \"\"\"\n",
@@ -153,8 +190,8 @@
     "        \"\"\"\n",
     "        abs_sc = np.abs(sc)\n",
     "        result = self.tau_0 * np.sign(sc)\n",
-    "        result[abs_sc < self.sc_s] = self.tau_s * sc\n",
-    "        result[abs_sc >= self.sc_p] = self.tau_p * sc\n",
+    "        result[abs_sc < self.sc_s] = self.tau_s * sc[abs_sc < self.sc_s]\n",
+    "        result[abs_sc >= self.sc_p] = self.tau_p * sc[abs_sc >= self.sc_p]\n",
     "        return result\n",
     "    \n",
     "    def polymerase_velocity(self, sc_behind, sc_ahead):\n",
@@ -174,11 +211,12 @@
     "        --------\n",
     "        The velocity of each polymerase (in nm/s).\n",
     "        \"\"\"\n",
-    "        return self.v_0  / (\n",
-    "               (1 + np.abs(\n",
-    "                   self.torque_response(sc_behind) / self.t_c)**self.torque_exp) *\n",
-    "               (1 + np.abs(\n",
-    "                   self.torque_response(sc_ahead) / self.t_c)**self.torque_exp))\n",
+    "        # Restrict exponential argument to 10, to ensure we don't overflow\n",
+    "        return self.v_0 / (\n",
+    "            (1 + np.exp(np.minimum(10.0,\n",
+    "                           (np.abs(self.torque_response(sc_behind)) - self.t_c) / self.stall_torque_width))) *\n",
+    "            (1 + np.exp(np.minimum(10.0,\n",
+    "                           (np.abs(self.torque_response(sc_ahead)) - self.t_c) / self.stall_torque_width))))\n",
     "    \n",
     "    def system_derivatives(self, states, polymerase_directions):\n",
     "        \"\"\"\n",
@@ -214,12 +252,20 @@
     "        supercoiling = np.diff(augmented_phi) / (np.diff(augmented_loc) * -self.w0)\n",
     "        rnac_torque = self.torque_response(supercoiling[1:]) - self.torque_response(supercoiling[:-1])\n",
     "        velocities = polymerase_directions * self.polymerase_velocity(supercoiling[1:], supercoiling[:-1])\n",
+    "        # Calculate inter-polymerase distances (augmented with large distances)\n",
+    "        inter_distances = np.concatenate((np.array([np.inf]),\n",
+    "                                          np.diff(augmented_loc[1:-1]),\n",
+    "                                          np.array([np.inf])))\n",
+    "        # Halt if the polymerase is within the RNAC radius in the direction it is going\n",
+    "        velocities[(polymerase_directions > 0) & (inter_distances[1:] < self.rnac_r)] = 0\n",
+    "        velocities[(polymerase_directions < 0) & (inter_distances[:-1] < self.rnac_r)] = 0\n",
+    "        \n",
     "        drag = self.eta * (states[1::3] ** self.alpha)\n",
     "        angular_changes =  drag * velocities * self.w0 / (self.chi + drag) - rnac_torque / (self.chi + drag)\n",
     "\n",
     "        derivatives = np.zeros(states.shape)\n",
     "        derivatives[::3] = velocities\n",
-    "        derivatives[1::3] = velocities\n",
+    "        derivatives[1::3] = polymerase_directions * velocities # Ensure that transcript size is strictly positive\n",
     "        derivatives[2::3] = angular_changes\n",
     "        return derivatives\n",
     "\n",
@@ -237,7 +283,7 @@
     "        RNAP_radius:           nm\n",
     "        RNAP_velocity:        nm / s\n",
     "        RNAP_torque_cutoff:   pN nm\n",
-    "        RNAP_torque_exponent: dimless\n",
+    "        RNAP_stall_torque_width: pN\n",
     "        DNA_force:            pN\n",
     "        DNA_bend_plength:     pN\n",
     "        DNA_twist_plength:    pN\n",
@@ -264,68 +310,142 @@
     "            params['DNA_bend_plength'], params['DNA_twist_plength'],\n",
     "            params['DNA_plectonome_twist_plength'], params['temperature'],\n",
     "            params['DNA_force'], params['RNAP_velocity'],\n",
-    "            params['RNAP_torque_cutoff'], params['RNAP_torque_exponent'],\n",
+    "            params['RNAP_torque_cutoff'], params['RNAP_stall_torque_width'],\n",
+    "            params['RNAP_radius'],\n",
     "            params['DNA_twist_mobility'], params['mRNA_drag'],\n",
     "            params['mRNA_exponent'], left_bc_free, right_bc_free,\n",
-    "            left_bc[0], right_bc[0], left_bc[1], right_bc[1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: implement RNA hard-sphere repulsion radius"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys_derivatives = bind_system_derivatives(params, ('free', (1000, 0)))\n",
-    "# Setup a system with a single polymerase\n",
+    "            left_bc[0], right_bc[0], left_bc[1], right_bc[1])\n",
     "\n",
-    "result = scipy.integrate.solve_ivp(lambda t,y: sys_derivatives(y, [1]), (0, 2000), ics, method='Radau')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = bind_supercoiling_model(params, ('free', (1000,0)))\n",
-    "ics = np.array([0, 0, 0])\n",
-    "result = scipy.integrate.solve_ivp(lambda t,y: model.system_derivatives(y,np.array([1.0])), (0,2000), ics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%timeit model.system_derivatives(ics,np.array([1.0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "@njit\n",
+    "def sample_discrete(probs):\n",
+    "    \"\"\"Randomly sample an index with probability given by probs.\"\"\"\n",
+    "    # Generate random number\n",
+    "    q = np.random.rand()\n",
+    "    \n",
+    "    # Find index\n",
+    "    i = 0\n",
+    "    p_sum = 0.0\n",
+    "    while p_sum < q:\n",
+    "        p_sum += probs[i]\n",
+    "        i += 1\n",
+    "    return i - 1\n",
     "\n",
-    "plt.plot(result.t, result.y.T)\n",
-    "plt.legend(('RNAP location', 'Nascent mRNA length', 'Excess DNA twist'))\n",
-    "plt.show()\n",
-    "plt.plot(result.t, result.y[2,:])\n",
-    "plt.show()\n",
+    "class SupercoilingSimulation(object):\n",
+    "    \"\"\"\n",
+    "    A class that encodes a Gillepse-algorithm method\n",
+    "    for stochastically simulating transcript initiation, alongside\n",
+    "    a supercoiling model.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, params, genes, bcs):\n",
+    "        \"\"\"\n",
+    "        Takes the problem formulation and initalizes the\n",
+    "        simulation internals.\n",
+    "        \n",
+    "        Args:\n",
+    "        -----\n",
+    "        params: A dictionary containing all relevant physical paramteres. See\n",
+    "            the docstring of `bind_supercoiling_model` for details.\n",
+    "            The extra parameters expected by this method are:\n",
+    "                base_promoter_initiation_rate: Rate that promoters add polymerases (1/sec)\n",
+    "        genes: A list of 2-tuples encoding (gene_start, gene_end, promoter_strength).\n",
+    "            The gene direction is inferred from these values.\n",
+    "        bcs: A 2-tuple encoding (left_bc, right_bc). A BC is either\n",
+    "            the string \"free\", or a tuple of (location, value).\n",
+    "        \"\"\"\n",
+    "        self.model = bind_supercoiling_model(params, bcs)\n",
+    "        self.genes = [(g[0], g[1]) for g in genes]\n",
+    "        self.base_promoter_rate = params['base_promoter_initiation_rate']\n",
+    "        self.promoter_strength = np.array([g[2] for g in genes])\n",
+    "        # By Gillepse, the mean initiation time is 1/sum(initiation_rates)\n",
+    "        self.init_mean_time = 1 / np.sum(self.promoter_strength * self.base_promoter_rate)\n",
+    "        self.init_probability = self.promoter_strength * self.base_promoter_rate * self.init_mean_time\n",
+    "        \n",
+    "    def simulate(self, tspan):\n",
+    "        \"\"\"\n",
+    "        Given a timespan, integrates using a Gillepse-inspired ODE\n",
+    "        solution.\n",
+    "        \n",
+    "        Args:\n",
+    "        -----\n",
+    "        tspan: A tuple containing (t_start, t_end) [s]\n",
+    "        \n",
+    "        Returns:\n",
+    "        --------\n",
+    "        A list of tuples, containing (times, states) for each integration interval.\n",
+    "        \"\"\"\n",
+    "        result = []\n",
+    "        \n",
+    "        active_polymerases = 0\n",
+    "        last_t = tspan[0]\n",
+    "        last_state = np.ndarray(0)\n",
+    "        polymerase_directions = np.ndarray(0)\n",
+    "        polymerase_gene_idx = np.ndarray(0, dtype=int)\n",
+    "        \n",
+    "        while last_t < tspan[1]:\n",
+    "            # Make a Gillepse draw to find the next polymerase attempt time\n",
+    "            next_attempt_time = last_t + np.random.exponential(self.init_mean_time)\n",
+    "            \n",
+    "            while last_t < next_attempt_time:\n",
+    "                if active_polymerases > 0:\n",
+    "                    # Do an ODE simulation\n",
+    "                    # Weird lambda currying. MWE that explains the problem:\n",
+    "                    # [(lambda curried_i:(lambda x: x * curried_i))(i) for i in range(10)]\n",
+    "                    # vs \n",
+    "                    # [lambda x: x * i for i in range(10)]\n",
+    "                    # https://stackoverflow.com/a/34021333\n",
+    "                    stop_events = [(lambda curried:\n",
+    "                                    lambda t,y:\n",
+    "                                    y[3*curried]\n",
+    "                                    - self.genes[polymerase_gene_idx[curried]][1])(i)\n",
+    "                                for i in range(active_polymerases)]\n",
+    "                    for i in range(active_polymerases):\n",
+    "                        stop_events[i].terminal = True\n",
+    "                    ode_result = scipy.integrate.solve_ivp(\n",
+    "                        lambda t,y:self.model.system_derivatives(y,polymerase_directions),\n",
+    "                        (last_t, next_attempt_time),\n",
+    "                        last_state,\n",
+    "                        events=stop_events)\n",
+    "                    \n",
+    "                    if ode_result.status == -1:\n",
+    "                        print(ode_result.message)\n",
+    "                        return None\n",
+    "                    result.append((ode_result.t, ode_result.y))\n",
+    "                    last_t = ode_result.t[-1]\n",
+    "                    last_state = ode_result.y[:,-1]\n",
     "\n",
-    "plt.plot(test_result.t, test_result.y.T)\n",
-    "plt.legend(('RNAP location', 'Nascent mRNA length', 'Excess DNA twist'))\n",
-    "plt.show()\n",
-    "plt.plot(test_result.t, test_result.y[2,:])"
+    "                    if ode_result.status == 1:\n",
+    "                        # A polymerase hit the stop site. See which one it is:\n",
+    "                        stopped_polymerase = np.where(np.array(\n",
+    "                            [len(x) for x in ode_result.t_events]) > 0)[0][0]\n",
+    "                        start_idx = stopped_polymerase * 3\n",
+    "                        # Remove it from the state\n",
+    "                        last_state = np.delete(last_state, np.s_[start_idx:(start_idx + 3)])\n",
+    "                        polymerase_directions = np.delete(polymerase_directions, stopped_polymerase)\n",
+    "                        polymerase_gene_idx = np.delete(polymerase_gene_idx, stopped_polymerase)\n",
+    "                        active_polymerases -= 1\n",
+    "                else:\n",
+    "                    # Just advance the time directly; no polymerases right now\n",
+    "                    last_t = next_attempt_time\n",
+    "\n",
+    "            # Do a draw to add a polymerase\n",
+    "            next_p_idx = sample_discrete(self.init_probability)\n",
+    "            next_gene = self.genes[next_p_idx]\n",
+    "            start_location = next_gene[0]\n",
+    "            # Don't add if the start location is within range of a polymerase\n",
+    "            if active_polymerases > 0 and np.min(np.abs(last_state[::3] - start_location)) < self.model.rnac_r:\n",
+    "                continue\n",
+    "            # Otherwise, continue adding\n",
+    "            start_direction = np.sign(next_gene[1] - next_gene[0])\n",
+    "            # Compute the excess twist at this location:\n",
+    "            new_twist = self.model.evaluate_twist(start_location, last_state)\n",
+    "            # Find the correct insertion index\n",
+    "            possible_inserts = np.append(last_state[::3], np.inf)\n",
+    "            insert_idx = np.where(possible_inserts > start_location)[0][0]\n",
+    "            last_state = np.insert(last_state, insert_idx * 3, [start_location, 0, new_twist])\n",
+    "            polymerase_gene_idx = np.insert(polymerase_gene_idx, insert_idx, next_p_idx)\n",
+    "            polymerase_directions = np.insert(polymerase_directions, insert_idx, start_direction)\n",
+    "            active_polymerases += 1\n",
+    "        return result"
    ]
   },
   {
@@ -334,10 +454,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@vectorize(signatures=\"float64(float64)\")\n",
-    "def test_ufunc(x):\n",
-    "    return 2 * x;\n",
-    "test_ufunc.ufunc"
+    "sim = SupercoilingSimulation(params, [(1000, 700, 1), (200, 400, 1)], ('free', (10000, 0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(1)\n",
+    "example_run = sim.simulate((0,1000))\n",
+    "for segment in example_run:\n",
+    "    plt.plot(segment[0], segment[1][::3,:].T, 'c')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.linspace(0,.05,100),sim.model.polymerase_velocity(np.zeros((100,)), np.linspace(0,.05,100)))\n",
+    "plt.show()\n",
+    "plt.plot(np.linspace(0,20,100), 1 / (1 + np.exp((np.linspace(0,20,100) - 12)/.1)))\n",
+    "plt.show()\n",
+    "plt.plot(np.linspace(0,.1,100), sim.model.torque_response(np.linspace(0,.1,100)))"
    ]
   },
   {
