Updated simulation to support arbitrary mutation events

--- a/sc_model.ipynb
+++ b/sc_model.ipynb
@@ -12,7 +12,8 @@
     "from numba.experimental import jitclass\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "# Ensure we don't "
+    "# Ensure we don't hit floating point errors\n",
+    "np.seterr('raise')"
    ]
   },
   {
@@ -51,6 +52,42 @@
     "    'temperature': 298, # K\n",
     "    'base_promoter_initiation_rate': 1 / 120 # 1 / sec\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = [1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.insert(1, 1000112)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[1,2,3].append([4,5,6])"
    ]
   },
   {
@@ -332,14 +369,28 @@
     "\n",
     "class SupercoilingSimulation(object):\n",
     "    \"\"\"\n",
-    "    A class that encodes a Gillepse-algorithm method\n",
+    "    A base class that encodes a Gillepse-algorithm method\n",
     "    for stochastically simulating transcript initiation, alongside\n",
     "    a supercoiling model.\n",
+    "    \n",
+    "    This code tracks the location of polymerases as they move over\n",
+    "    the genome. Events such as polymerase addition and removal are\n",
+    "    natively tracked using built-in functions. Other genomic activity\n",
+    "    such as topoisomerase activity can be extended with this model.\n",
+    "    \n",
+    "    A decorator @attach_on_call is provided that allows arbitrary hooking\n",
+    "    into the event system. Events can be predicated on an ODE\n",
+    "    integrated state or as a Gillepsie-style stochastic event.\n",
     "    \"\"\"\n",
-    "    def __init__(self, params, genes, bcs):\n",
+    "    \n",
+    "    def __init__(self, params, bcs, genes):\n",
     "        \"\"\"\n",
     "        Takes the problem formulation and initalizes the\n",
     "        simulation internals.\n",
+    "        \n",
+    "        Additionally initalizes an stochastic_events list, that contains\n",
+    "        events in the form of tuples\n",
+    "        (base_rate, state_multiplier_func,state_mutate_function)\n",
     "        \n",
     "        Args:\n",
     "        -----\n",
@@ -347,18 +398,91 @@
     "            the docstring of `bind_supercoiling_model` for details.\n",
     "            The extra parameters expected by this method are:\n",
     "                base_promoter_initiation_rate: Rate that promoters add polymerases (1/sec)\n",
-    "        genes: A list of 2-tuples encoding (gene_start, gene_end, promoter_strength).\n",
-    "            The gene direction is inferred from these values.\n",
     "        bcs: A 2-tuple encoding (left_bc, right_bc). A BC is either\n",
     "            the string \"free\", or a tuple of (location, value).\n",
+    "        genes: An optional list of 2-tuples encoding (gene_start, gene_end, promoter_strength).\n",
+    "            The gene direction is inferred from these values.\n",
     "        \"\"\"\n",
     "        self.model = bind_supercoiling_model(params, bcs)\n",
     "        self.genes = [(g[0], g[1]) for g in genes]\n",
     "        self.base_promoter_rate = params['base_promoter_initiation_rate']\n",
-    "        self.promoter_strength = np.array([g[2] for g in genes])\n",
-    "        # By Gillepse, the mean initiation time is 1/sum(initiation_rates)\n",
-    "        self.init_mean_time = 1 / np.sum(self.promoter_strength * self.base_promoter_rate)\n",
-    "        self.init_probability = self.promoter_strength * self.base_promoter_rate * self.init_mean_time\n",
+    "        \n",
+    "        self.stochastic_events = []\n",
+    "        \n",
+    "        for g in genes:\n",
+    "            self.add_stochastic_gene_init_event(*g)\n",
+    "    \n",
+    "    def add_polymerase(self, location, direction, termination_func, event_functions=[]):\n",
+    "        \"\"\"\n",
+    "        Adds a polymerase to the current state. A termination function is passed\n",
+    "        which specifies when the polymerase should be removed from the simulation.\n",
+    "        \n",
+    "        Additional event functions can be passed which encode when extra ODE events\n",
+    "        should be triggered, in addition to a function\n",
+    "        specifying what happens when that event occurs. This can be used to simulate\n",
+    "        things such as transcript cleavage, stalling, etc.\n",
+    "        \n",
+    "        Args:\n",
+    "        -----\n",
+    "        location: A float encoding the start location\n",
+    "        direction: An integer, either +1 or -1, to indicate polymerase motion direction\n",
+    "        termination_func: A function that takes two arguments, returns 0 when termination should occur\n",
+    "            X: the 3N number of states encoding (position, transcript_length, excess_twist)\n",
+    "            i: The index of the polymerase you belong to\n",
+    "        event_functions: A list of tuples (event_func, mutate_func)\n",
+    "            event_func: A function with the same signature as above.\n",
+    "            mutate_func: A function that takes the 3N states and mutates them somehow\n",
+    "        \"\"\"\n",
+    "        new_twist = self.model.evaluate_twist(location, self.simstate)\n",
+    "        # Find the correct insertion index\n",
+    "        possible_inserts = np.append(self.simstate[::3], np.inf)\n",
+    "        insert_idx = np.where(possible_inserts > location)[0][0]\n",
+    "        # Insert new polymerase state into the correct location\n",
+    "        self.simstate = np.insert(self.simstate, insert_idx * 3, [location, 0, new_twist])\n",
+    "        self.polymerase_directions = np.insert(self.polymerase_directions, insert_idx, direction)\n",
+    "        \n",
+    "        # Add ODE functions\n",
+    "        def terminate_transcription(state, i):\n",
+    "            self.simstate = np.delete(self.simstate, np.s_[(i * 3):((i + 1) * 3)])\n",
+    "            self.polymerase_directions = np.delete(self.polymerase_directions, i)\n",
+    "            del self.simstate_ode_funcs[i]\n",
+    "        self.simstate_ode_funcs.insert(insert_idx,\n",
+    "                                       [(termination_func, terminate_transcription)] + event_functions)\n",
+    "\n",
+    "    def add_stochastic_gene_init_event(self, gene_start, gene_end, strength, state_func=lambda x: 1.0):\n",
+    "        \"\"\"\n",
+    "        Initalizes a simple gene which has a state-independent initiation\n",
+    "        rate, and whose spawned polymerases debind exactly at the gene end.\n",
+    "        \n",
+    "        Polymerases are not allowed to add if there is a polymerase already\n",
+    "        occupying the starting site.\n",
+    "        \n",
+    "        Args:\n",
+    "        -----\n",
+    "        gene_start: The location of the gene starting location\n",
+    "        gene_end: The location of the gene ending location\n",
+    "        strength: The state-independent multiplier on the base polymerase addition rate\n",
+    "        state_func: An optional function that takes the state of the system (3N vector)\n",
+    "            and returns an additional state-dependent multiplier\n",
+    "        \n",
+    "        Side effects:\n",
+    "        -------------\n",
+    "        Adds this gene to the stochastic_events struct.\n",
+    "        \"\"\"\n",
+    "        direction = np.sign(gene_end - gene_start)\n",
+    "        def mutate_func(self, state):\n",
+    "            # Our mutate function simply calls add_polymerase, with a lambda that\n",
+    "            # triggers an event when the polymerase reaches the gene end\n",
+    "            self.add_polymerase(gene_start, direction, lambda x, i: x[3*i] - gene_end)\n",
+    "        # Define a function that stops polymerase addition if there is already a polymerase\n",
+    "        # occupying the site\n",
+    "        reject_occupied_site = lambda x: np.min(\n",
+    "            np.abs(np.concatenate((np.array([np.inf]), x[::3])) - gene_start)\n",
+    "        ) > self.model.rnac_r\n",
+    "        final_state_func = lambda x: reject_occupied_site(x) * state_func(x)\n",
+    "        self.stochastic_events.append((self.base_promoter_rate * strength,\n",
+    "                                       final_state_func,\n",
+    "                                       mutate_func))\n",
     "        \n",
     "    def simulate(self, tspan):\n",
     "        \"\"\"\n",
@@ -373,37 +497,43 @@
     "        --------\n",
     "        A list of tuples, containing (times, states) for each integration interval.\n",
     "        \"\"\"\n",
+    "        # Reset sim state\n",
+    "        self.simstate = np.zeros(0)\n",
+    "        self.simstate_ode_funcs = []\n",
+    "        self.polymerase_directions = np.zeros(0)\n",
     "        result = []\n",
     "        \n",
-    "        active_polymerases = 0\n",
     "        last_t = tspan[0]\n",
-    "        last_state = np.ndarray(0)\n",
-    "        polymerase_directions = np.ndarray(0)\n",
-    "        polymerase_gene_idx = np.ndarray(0, dtype=int)\n",
     "        \n",
     "        while last_t < tspan[1]:\n",
-    "            # Make a Gillepse draw to find the next polymerase attempt time\n",
-    "            next_attempt_time = last_t + np.random.exponential(self.init_mean_time)\n",
+    "            # Make a Gillepse draw to find the next event to occur\n",
+    "            gillepse_mean_time = 1 / np.sum([x[0] for x in self.stochastic_events])\n",
+    "            next_attempt_time = last_t + np.random.exponential(gillepse_mean_time)\n",
     "            \n",
     "            while last_t < next_attempt_time:\n",
-    "                if active_polymerases > 0:\n",
+    "                if len(self.simstate) > 0:\n",
     "                    # Do an ODE simulation\n",
-    "                    # Weird lambda currying. MWE that explains the problem:\n",
-    "                    # [(lambda curried_i:(lambda x: x * curried_i))(i) for i in range(10)]\n",
-    "                    # vs \n",
-    "                    # [lambda x: x * i for i in range(10)]\n",
-    "                    # https://stackoverflow.com/a/34021333\n",
-    "                    stop_events = [(lambda curried:\n",
-    "                                    lambda t,y:\n",
-    "                                    y[3*curried]\n",
-    "                                    - self.genes[polymerase_gene_idx[curried]][1])(i)\n",
-    "                                for i in range(active_polymerases)]\n",
-    "                    for i in range(active_polymerases):\n",
+    "                    stop_events = []\n",
+    "                    mutate_funcs = []\n",
+    "                    for polymerase_idx, events in enumerate(self.simstate_ode_funcs):\n",
+    "                        # Weird lambda currying. MWE that explains the problem:\n",
+    "                        # [(lambda curried_i:(lambda x: x * curried_i))(i) for i in range(10)]\n",
+    "                        # vs \n",
+    "                        # [lambda x: x * i for i in range(10)]\n",
+    "                        # https://stackoverflow.com/a/34021333\n",
+    "                        stop_events += [(lambda curried:\n",
+    "                                        lambda t, x: event[0](x,curried))(\n",
+    "                            polymerase_idx) for event in events]\n",
+    "                        mutate_funcs += [(lambda curried:\n",
+    "                                        lambda x: event[1](x,curried))(\n",
+    "                            polymerase_idx) for event in events]\n",
+    "                    for i in range(len(stop_events)):\n",
     "                        stop_events[i].terminal = True\n",
     "                    ode_result = scipy.integrate.solve_ivp(\n",
-    "                        lambda t,y:self.model.system_derivatives(y,polymerase_directions),\n",
+    "                        lambda t,y:self.model.system_derivatives(y,\n",
+    "                                                self.polymerase_directions),\n",
     "                        (last_t, next_attempt_time),\n",
-    "                        last_state,\n",
+    "                        self.simstate,\n",
     "                        events=stop_events)\n",
     "                    \n",
     "                    if ode_result.status == -1:\n",
@@ -411,40 +541,28 @@
     "                        return None\n",
     "                    result.append((ode_result.t, ode_result.y))\n",
     "                    last_t = ode_result.t[-1]\n",
-    "                    last_state = ode_result.y[:,-1]\n",
+    "                    self.simstate = ode_result.y[:,-1]\n",
     "\n",
     "                    if ode_result.status == 1:\n",
-    "                        # A polymerase hit the stop site. See which one it is:\n",
-    "                        stopped_polymerase = np.where(np.array(\n",
+    "                        # A polymerase hit a stop event site. See which one it is:\n",
+    "                        event_idx = np.where(np.array(\n",
     "                            [len(x) for x in ode_result.t_events]) > 0)[0][0]\n",
-    "                        start_idx = stopped_polymerase * 3\n",
-    "                        # Remove it from the state\n",
-    "                        last_state = np.delete(last_state, np.s_[start_idx:(start_idx + 3)])\n",
-    "                        polymerase_directions = np.delete(polymerase_directions, stopped_polymerase)\n",
-    "                        polymerase_gene_idx = np.delete(polymerase_gene_idx, stopped_polymerase)\n",
-    "                        active_polymerases -= 1\n",
+    "                        # Mutate our state\n",
+    "                        mutate_funcs[event_idx](self.simstate)\n",
     "                else:\n",
     "                    # Just advance the time directly; no polymerases right now\n",
     "                    last_t = next_attempt_time\n",
     "\n",
-    "            # Do a draw to add a polymerase\n",
-    "            next_p_idx = sample_discrete(self.init_probability)\n",
-    "            next_gene = self.genes[next_p_idx]\n",
-    "            start_location = next_gene[0]\n",
-    "            # Don't add if the start location is within range of a polymerase\n",
-    "            if active_polymerases > 0 and np.min(np.abs(last_state[::3] - start_location)) < self.model.rnac_r:\n",
-    "                continue\n",
-    "            # Otherwise, continue adding\n",
-    "            start_direction = np.sign(next_gene[1] - next_gene[0])\n",
-    "            # Compute the excess twist at this location:\n",
-    "            new_twist = self.model.evaluate_twist(start_location, last_state)\n",
-    "            # Find the correct insertion index\n",
-    "            possible_inserts = np.append(last_state[::3], np.inf)\n",
-    "            insert_idx = np.where(possible_inserts > start_location)[0][0]\n",
-    "            last_state = np.insert(last_state, insert_idx * 3, [start_location, 0, new_twist])\n",
-    "            polymerase_gene_idx = np.insert(polymerase_gene_idx, insert_idx, next_p_idx)\n",
-    "            polymerase_directions = np.insert(polymerase_directions, insert_idx, start_direction)\n",
-    "            active_polymerases += 1\n",
+    "            # Perform a Gillepsie draw\n",
+    "            event_probs = gillepse_mean_time * np.array([x[0] for x in self.stochastic_events])\n",
+    "            \n",
+    "            #self.init_mean_time = 1 / np.sum(self.promoter_strength * self.base_promoter_rate)\n",
+    "            #self.init_probability = self.promoter_strength * self.base_promoter_rate * self.init_mean_time\n",
+    "            next_stochastic_idx = sample_discrete(event_probs)\n",
+    "            # Apply the state-specific state value to see if we perform this event\n",
+    "            if np.random.random() < self.stochastic_events[next_stochastic_idx][1](self.simstate):\n",
+    "                # Perform the stochastic state mutation\n",
+    "                self.stochastic_events[next_stochastic_idx][2](self, self.simstate)\n",
     "        return result"
    ]
   },
@@ -454,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = SupercoilingSimulation(params, [(1000, 700, 1), (200, 400, 1)], ('free', (10000, 0)))"
+    "sim = SupercoilingSimulation(params, ('free', (10000, 0)), [(1000, 700, 1), (200, 500, 1)])"
    ]
   },
   {
@@ -464,7 +582,7 @@
    "outputs": [],
    "source": [
     "np.random.seed(1)\n",
-    "example_run = sim.simulate((0,1000))\n",
+    "%timeit example_run = sim.simulate((0,10000))\n",
     "for segment in example_run:\n",
     "    plt.plot(segment[0], segment[1][::3,:].T, 'c')"
    ]
